source moved into src folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,44 +8,47 @@ add_subdirectory(glm)
 add_subdirectory(glew/build/cmake)
 include_directories(CImg)
 include_directories(glew/include)
+include_directories(stb)
 add_compile_definitions(STB_IMAGE_IMPLEMENTATION)
 
 set(CMAKE_CXX_STANDARD 17)
 set(GLEW_USE_STATIC_LIBS TRUE)
 add_executable(opengl
-        main.cpp
-        buffer.h
-        buffer.cpp
-        common.h
-        errors.h
-        errors.cpp
-        shader_program.h
-        shader_program.cpp
-        mesh.h
-        mesh.cpp
-        model.h
-        model.cpp
-        material.h
-        material.cpp
-        texture.h
-        texture.cpp
-        model_loader.h
-        model_loader.cpp
-        scene.h
-        scene.cpp
-        scene_setup.h
-        shader_set.h
-        shader_set.cpp
-        framebuffer.h
-        framebuffer.cpp
-        uniform_buffer.h
-        uniform_buffer.cpp
-        shaders/light.h
-        shaders/scene.h
-        shaders/border.h
-        shaders/silhouette.h
+        src/main.cpp
+        src/buffer.h
+        src/buffer.cpp
+        src/common.h
+        src/errors.h
+        src/errors.cpp
+        src/shader_program.h
+        src/shader_program.cpp
+        src/mesh.h
+        src/mesh.cpp
+        src/model.h
+        src/model.cpp
+        src/material.h
+        src/material.cpp
+        src/texture.h
+        src/texture.cpp
+        src/model_loader.h
+        src/model_loader.cpp
+        src/scene.h
+        src/scene.cpp
+        src/scene_setup.h
+        src/shader_set.h
+        src/shader_set.cpp
+        src/framebuffer.h
+        src/framebuffer.cpp
+        src/uniform_buffer.h
+        src/uniform_buffer.cpp
+        src/shaders/light.h
+        src/shaders/scene.h
+        src/shaders/border.h
+        src/shaders/silhouette.h
         )
 
 find_package(OpenGL REQUIRED)
 target_include_directories(opengl PUBLIC ${OPENGL_INCLUDE_DIR})
 target_link_libraries(opengl glm glfw glew pthread assimp ${OPENGL_gl_LIBRARY} )
+
+add_compile_options(-fvisibility=hidden)
