--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,18 @@
 cmake_minimum_required(VERSION 3.15)
-project(opengl)
+project(opengl_learn)
 
 set(BUILD_SHARED_LIBS OFF)
 add_subdirectory(assimp)
 add_subdirectory(glfw)
 add_subdirectory(glm)
 add_subdirectory(glew/build/cmake)
-include_directories(CImg)
-include_directories(glew/include)
-include_directories(stb)
 add_compile_definitions(STB_IMAGE_IMPLEMENTATION)
 
 function(ADD_RESOURCES out_var root)
     set(result)
     set(sources "namespace NResource {\n    namespace NImpl { extern \"C\" {\n")
     set(defines)
-    foreach(in_f ${ARGN})
+    foreach (in_f ${ARGN})
         file(RELATIVE_PATH src_f "${CMAKE_CURRENT_SOURCE_DIR}/${root}" "${CMAKE_CURRENT_SOURCE_DIR}/${in_f}")
         string(REPLACE "/" "_" fs_flat ${src_f})
         string(REPLACE "." "_" fs_flat ${fs_flat})
@@ -30,7 +27,7 @@ function(ADD_RESOURCES out_var root)
         list(APPEND sources "        extern unsigned char ${fs_flat}\;\n        extern unsigned int ${fs_flat}_len\;\n")
         list(APPEND defines "    const TResource ${fs_flat}(&NImpl::${fs_flat}, NImpl::${fs_flat}_len)\;\n")
         list(APPEND result ${out_f})
-    endforeach()
+    endforeach ()
     list(APPEND sources "    }}\n")
     list(APPEND defines "}\n")
     file(WRITE "${PROJECT_BINARY_DIR}/resource_def.h" ${sources}${defines})
@@ -42,6 +39,7 @@ add_resources(RES src
         src/shaders/border.frag
         src/shaders/border.vert
         src/shaders/depth.frag
+        src/shaders/hdr.frag
         src/shaders/light.frag
         src/shaders/light.vert
         src/shaders/normals.frag
@@ -62,46 +60,48 @@ add_resources(RES src
         )
 
 
-
 set(CMAKE_CXX_STANDARD 17)
 set(GLEW_USE_STATIC_LIBS TRUE)
-add_executable(opengl
-    src/main.cpp
-    src/buffer.h
-    src/buffer.cpp
-    src/common.h
-    src/errors.h
-    src/errors.cpp
-    src/shader_program.h
-    src/shader_program.cpp
-    src/mesh.h
-    src/mesh.cpp
-    src/model.h
-    src/model.cpp
-    src/material.h
-    src/material.cpp
-    src/texture.h
-    src/texture.cpp
-    src/model_loader.h
-    src/model_loader.cpp
-    src/scene.h
-    src/scene.cpp
-    src/scene_setup.h
-    src/shader_set.h
-    src/shader_set.cpp
-    src/framebuffer.h
-    src/framebuffer.cpp
-    src/uniform_buffer.h
-    src/uniform_buffer.cpp
-    src/shaders/light.h
-    src/shaders/scene.h
-    src/shaders/border.h
-    src/shaders/silhouette.h
-    ${RES}
-    )
+add_executable(opengl_learn
+        src/main.cpp
+        src/buffer.h
+        src/buffer.cpp
+        src/common.h
+        src/errors.h
+        src/errors.cpp
+        src/shader_program.h
+        src/shader_program.cpp
+        src/mesh.h
+        src/mesh.cpp
+        src/model.h
+        src/model.cpp
+        src/material.h
+        src/material.cpp
+        src/texture.h
+        src/texture.cpp
+        src/model_loader.h
+        src/model_loader.cpp
+        src/scene.h
+        src/scene.cpp
+        src/scene_setup.h
+        src/shader_set.h
+        src/shader_set.cpp
+        src/framebuffer.h
+        src/framebuffer.cpp
+        src/uniform_buffer.h
+        src/uniform_buffer.cpp
+        src/shaders/light.h
+        src/shaders/hdr.h
+        src/shaders/scene.h
+        src/shaders/border.h
+        src/shaders/silhouette.h
+        ${RES}
+        )
 
 find_package(OpenGL REQUIRED)
-target_include_directories(opengl PUBLIC ${PROJECT_BINARY_DIR} ${OPENGL_INCLUDE_DIR})
-target_link_libraries(opengl glm glfw glew_s assimp ${OPENGL_gl_LIBRARY})
-
+target_include_directories(opengl_learn PUBLIC ${PROJECT_BINARY_DIR} ${OPENGL_INCLUDE_DIR} CImg glew/include stb)
+target_link_libraries(opengl_learn glm glfw glew_s assimp ${OPENGL_gl_LIBRARY})
 add_compile_options(-fvisibility=hidden)
+file(COPY images DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY nanosuit DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+target_compile_options(opengl_learn PRIVATE $<$<CXX_COMPILER_ID:Clang>:-g>)
